@@ -1,0 +1,4 @@
+#[derive(Debug, Deserialize, Serialize)]
+pub struct Job {
+    pub id: u64,
+}
